add DTO constructor for Mission participants